# agent-engineering-lab

./: .dockerignore  .env.example  .gitignore  Dockerfile  LEARNING_PLAN.md  MENTORING.md  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml
backend/: config.py  error_handlers.py  logging_config.py  main.py  request_context.py  request_id_middleware.py
data/: app.db  documents.json
docs/: agent-stage-checklist.md  agent-stage-review.md  api.md  architecture.md  configuration.md  database-configuration-review.md  error-log.md  final-delivery-review.md  frontend.md  glossary.md  langgraph-agent-stage-review.md  langgraph-memory-demo.md  langgraph-minimal-agent.md  learning-log.md  postgresql-stage-review.md  project-stage-summary.md  pseudo-langgraph-agent.md  runbook.md  setup.md
frontend/: admin_documents.py  admin_feedback.py  admin_tasks.py  api_client.py  document_error_messages.py  retriever_backend_view.py  streamlit_app.py  task_event_view.py  task_failure_view.py  task_list_view.py  task_progress_view.py  task_result_summary.py  task_storage_view.py
scripts/: bootstrap_project.ps1  check_docker_build.ps1  check_docker_compose.ps1  check_environment.ps1  check_postgres.ps1  check_postgresql_agent.ps1  check_project.ps1  check_rag_evaluation.ps1  check_rag_evaluation_ci.ps1  check_task_center.ps1  list_project_checks.ps1  migrate_sqlite.ps1  start_admin_documents.ps1  start_admin_feedback.ps1  start_backend.ps1  start_frontend.ps1
tests/: conftest.py  test_add_document.py  test_admin_documents_page.py  test_admin_tasks_page.py  test_agent_tools.py  test_answer_with_citation.py  test_backend_agent.py  (+125 more)
(+141 files in other folders)
