[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-knowledge-agent-learning"
version = "0.1.0"
description = "A beginner-friendly, project-based path to building an enterprise knowledge agent."
requires-python = ">=3.13,<3.14"
dependencies = [
    "jieba>=0.42,<1",
    "langgraph",
    "python-multipart",
    "requests",
    "streamlit",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<10",
    "pytest-cov>=6,<8",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["week01"]

[tool.coverage.report]
show_missing = true
fail_under = 80
