[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-knowledge-agent-learning"
version = "0.1.0"
description = "A beginner-friendly, project-based path to building an enterprise knowledge agent."
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.137,<1",
    "jieba>=0.42,<1",
    "langgraph>=1.2,<2",
    "pydantic>=2.12,<3",
    "python-dotenv>=1,<2",
    "python-multipart>=0.0.20,<1",
    "requests>=2.32,<3",
    "streamlit>=1.58,<2",
    "uvicorn>=0.49,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<10",
    "pytest-cov>=6,<8",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["week01"]

[tool.coverage.report]
show_missing = true
fail_under = 80
